[tool.poetry]
name = "poe_gwennen_gambler"
version = "1.3"
description = ""
authors = ["Elkosscom <52695010+Elkosscom@users.noreply.github.com>"]
license = "GNU GPL v2"

[tool.poetry.dependencies]
python = "^3.9"
keyboard = "^0.13.5"
pandas = "^1.3.1"
PyAutoGUI = "^0.9.53"
pywin32 = "^301"
pyperclip = "^1.8.2"
requests = "^2.26.0"
PySimpleGUI = "^4.45.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
pyinstaller = "^4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
